--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -4,7 +4,7 @@ margin: 0;
 
 }
 .navbar{
-  background-image: url("../img/fond_header.jpg");
+  background-image: url("../img/fondnavbar.jpg");
 background-repeat: no-repeat;
 background-size: cover;
 }
@@ -27,10 +27,5 @@ height: 40px;
 margin: 1px;
 border-bottom: 3px solid;
 color: #31a0d6;
-height:20px;
-
-
-
-
-
+height:4vh;
 }
