--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -18,6 +18,7 @@ bottom: 0;
 height: 180px;
 
 
+
 }
 
 footer,p, h3, .categorie a, a{
@@ -44,15 +45,15 @@ footer #mentions{
 	display:flex;
 	flex-direction: column;
 	justify-content: space-between;
-	margin-bottom: 10px;
 	width: 290px;
+	padding: 7px;
 	
 }
 
 footer #mentions div{
 
 display:flex;
-width: 280px;
+width: 290px;
 justify-content: space-between;
 margin-bottom: 10px;
 
@@ -63,11 +64,13 @@ footer .categorie{
 	flex-direction: column;
 	justify-content: center
 
+
+
 }
 
 footer .categorie h3{
    text-decoration: underline;
-   color:;
+   padding:7px;
 }
 
 
@@ -77,17 +80,22 @@ display:flex;
 flex-direction: column;
 justify-content: space-between;
 height: 50%;
-margin-top: 30%;
+margin-top: 15%;
+padding:7px;
 
 
 }
 
+footer .img{
+padding: 7px;
+}
 
 footer .map{
 background-image:url(../img/map.png); 
 background-repeat: no-repeat;
 height: 80%;
- transition: 0.8s;
+transition: 0.8s;
+padding: 7px;
 }
 
 
@@ -181,7 +189,7 @@ li {
 
 .menu:hover,
 .menu:focus {
-  background: #212F3D ;
+  color: #F5B041 ;
 }
 
 nav > ul {
@@ -221,7 +229,7 @@ nav > ul > li > ul .menu {
 
 
  li a:hover{
-background: #212F3D ;
+color: #F5B041 ;
 }
 
 
