--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -12,13 +12,9 @@ footer{
 display:flex;
 justify-content: space-between;
 width: 100%;
-background-color: #F5B041 ;
-position: absolute;
-bottom: 0;
+background-color: #F5B041;
+margin-top: 5%;
 height: 180px;
-
-
-
 }
 
 footer,p, h3, .categorie a, a{
@@ -182,7 +178,8 @@ li {
   white-space: nowrap;
   text-overflow: ellipsis;
   position:relative;
-   z-index:2;
+  z-index:2;
+  transition: 0.2s;
 
 }
 
@@ -227,9 +224,57 @@ nav > ul > li > ul .menu {
   padding: 10px;
 }
 
+li a{
+transition: 0.2s;
+}
 
  li a:hover{
 color: #F5B041 ;
 }
 
+.logohover{
+  height: 50px;
+  background-image:url(../img/logo.png);
+  background-size: 200px;
+  width: 200px;
+  transition: 0.2s;
+}
 
+.logohover:hover{
+  height: 50px;
+  background-image:url(../img/logohover.png);
+  background-size: 200px;
+  width: 200px;
+}
+
+
+.sous_categorie{
+
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 20%;
+}
+
+.sous_categorie div{
+
+display:flex;
+justify-content: space-between;
+width: 45%;
+
+}
+
+@media (max-width: 1350px) {
+  .sous_categorie div{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .sous_categorie {
+
+    height: 700px;
+  }
+
+}
