--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -1,31 +1,313 @@
-body{
+@import url('https://fonts.googleapis.com/css?family=Concert+One&display=swap');
+
+*{
+padding: 0;
 margin: 0;
+outline: none;
+font-family: 'Concert One' ;
+
+}
+
+footer{
+display:flex;
+justify-content: space-between;
+width: 100%;
+background-color: #F5B041;
+margin-top: 5%;
+height: 180px;
+}
+
+footer,p, h3, .categorie a, a{
+
+color:white;
+text-decoration: none;
+}
+
+footer a:hover{
+	color:#2C3E50;
+}
+
+
+footer .footer{
+	display:flex;
+	flex-direction: column;
+	flex:2;
+	justify-content: flex-end;
+	align-items: center
+
+}
+
+footer #mentions{
+	display:flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 290px;
+	padding: 7px;
+	
+}
+
+footer #mentions div{
+
+display:flex;
+width: 290px;
+justify-content: space-between;
+margin-bottom: 10px;
+
+}
+
+footer .categorie{
+	display:flex;
+	flex-direction: column;
+	justify-content: center
+
 
 
 }
-.navbar{
-  background-image: url("../img/fondnavbar.jpg");
+
+footer .categorie h3{
+   text-decoration: underline;
+   padding:7px;
+}
+
+
+footer .categorie .titre{
+
+display:flex;
+flex-direction: column;
+justify-content: space-between;
+height: 50%;
+margin-top: 15%;
+padding:7px;
+
+
+}
+
+footer .img{
+padding: 7px;
+}
+
+footer .map{
+background-image:url(../img/map.png); 
 background-repeat: no-repeat;
-background-size: cover;
+height: 80%;
+transition: 0.8s;
+padding: 7px;
 }
-.navbar li, a, ul{
-  color: white;
-  margin: 0;
-  padding:13px;
-  text-decoration: none;
-  list-style-type:none;
-  display: flex;
-  flex-direction:row;
-  justify-content: space-around;
+
+
+footer .map:hover{
+
+background-image:url(../img/map2.png); 
+}
+
+
+
+
+input[type="submit"]{
+	cursor:pointer;
+}
+
+.mail{
+
+border:none;
+width:200px;
+height:50px;
+color:#fff;
+font-weight:700;
+border-radius:.25rem;
+text-transform:uppercase!important;
+background-color:#1C2833 
+}
+
+.mail:hover{
+
+background-color:black;
+cursor:pointer;
+}
+
+.contact{
+
+display: flex;
+width: 100%;
+justify-content: center;
+margin-top: 10%;
+}
+
+
+nav a{
+
+color: white;
+margin: 0;
+padding:13px;
+text-decoration: none;
+list-style-type:none;
+display: flex;
+flex-direction:row;
+justify-content: space-around;
 text-align: center;
-}
-li{
-height: 40px;
 
 }
- li:hover{
-margin: 1px;
-border-bottom: 3px solid;
-color: #31a0d6;
-height:4vh;
+
+nav {
+  width: 100%;
+  text-align: center;
+  padding:0;
+  margin:0;
+
+  
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none; 
+
+}
+
+li {
+  margin: 0;
+  background-color: #2C3E50 ;
+  
+}
+
+.menu , .lien {
+  display: block;
+  padding: 10px 0;
+  color: white;
+  text-decoration: none;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  position:relative;
+  z-index:2;
+  transition: 0.2s;
+
+}
+
+
+.menu:hover,
+.menu:focus {
+  color: #F5B041 ;
+}
+
+nav > ul {
+  display: table;
+  width: 100%;
+
+}
+nav > ul > li {
+  display: table-cell;
+  width: 16%;
+  
+}
+nav > ul li {
+  position: relative;
+}
+nav li ul {
+  display: none;
+  position: absolute;
+
+}
+nav > ul > li > ul {
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+nav > ul > li li > ul {
+  top: 0;
+  left: 100%;
+}
+nav li:hover > ul {
+  display: block;
+}
+nav > ul > li > ul .menu {
+  text-align: left;
+  padding: 10px;
+}
+
+li a{
+transition: 0.2s;
+}
+
+ li a:hover{
+color: #F5B041 ;
+}
+
+.logohover{
+  height: 50px;
+  background-image:url(../img/logo.png);
+  background-size: 200px;
+  width: 200px;
+  transition: 0.2s;
+}
+
+.logohover:hover{
+  height: 50px;
+  background-image:url(../img/logohover.png);
+  background-size: 200px;
+  width: 200px;
+}
+
+.logoprofilhover{
+  height: 35px;
+  background-image:url(../img/logo_profil.png);
+  background-size: 35px;
+  width: 35px;
+  transition: 0.2s;
+}
+
+.logoprofilhover:hover{
+  height: 35px;
+  background-image:url(../img/logo_profilhover.png);
+  background-size: 35px;
+  width: 35px;
+  transition: 0.2s;
+}
+
+
+
+
+.sous_categorie{
+
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 20%;
+}
+
+.sous_categorie div{
+
+display:flex;
+justify-content: space-between;
+width: 45%;
+
+}
+
+@media (max-width: 1350px) {
+  .sous_categorie div{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .sous_categorie {
+
+    height: 700px;
+  }
+
+}
+
+
+.disconnect input[type="submit"]{
+
+  border: none;
+  background-color: transparent;
+  color: white;
+  font-size: 16px; 
+  transition: 0.2s;
+}
+
+.disconnect input[type="submit"]:hover{
+
+  color: #F5B041;
 }
