--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -6,6 +6,12 @@ margin: 0;
 outline: none;
 font-family: 'Concert One' ;
 
+
+}
+body{
+	background-image: url('../img/fond_site.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 footer{
@@ -43,7 +49,7 @@ footer #mentions{
 	justify-content: space-between;
 	width: 290px;
 	padding: 7px;
-	
+
 }
 
 footer #mentions div{
@@ -87,7 +93,7 @@ padding: 7px;
 }
 
 footer .map{
-background-image:url(../img/map.png); 
+background-image:url(../img/map.png);
 background-repeat: no-repeat;
 height: 80%;
 transition: 0.8s;
@@ -97,7 +103,7 @@ padding: 7px;
 
 footer .map:hover{
 
-background-image:url(../img/map2.png); 
+background-image:url(../img/map2.png);
 }
 
 
@@ -116,7 +122,7 @@ color:#fff;
 font-weight:700;
 border-radius:.25rem;
 text-transform:uppercase!important;
-background-color:#1C2833 
+background-color:#1C2833
 }
 
 .mail:hover{
@@ -154,20 +160,20 @@ nav {
   padding:0;
   margin:0;
 
-  
+
 }
 
 ul {
   margin: 0;
   padding: 0;
-  list-style: none; 
+  list-style: none;
 
 }
 
 li {
   margin: 0;
   background-color: #2C3E50 ;
-  
+
 }
 
 .menu , .lien {
@@ -197,7 +203,7 @@ nav > ul {
 nav > ul > li {
   display: table-cell;
   width: 16%;
-  
+
 }
 nav > ul li {
   position: relative;
@@ -303,7 +309,7 @@ width: 45%;
   border: none;
   background-color: transparent;
   color: white;
-  font-size: 16px; 
+  font-size: 16px;
   transition: 0.2s;
 }
 
