--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -277,14 +277,14 @@ margin-left: 547px;
 padding: 5px;
 background-color:rgba(255, 255, 255, 0.5);
 height: 30vh;
-width: 15vw;
+width: 20vw;
 border-radius: 4px;
 text-align: center;
 
 }
 
 #panel_inscription{
-padding: 100%;
+padding: 10%;
 padding-left: 0px;
 padding-right: 0px;
 margin-right:4%;
@@ -297,10 +297,10 @@ display:flex;
 justify-content: center;
 margin: 124px;
 margin-left: 35%;
-padding: 5px;
+padding: 2px;
 padding-top: 42px;
 background-color:rgba(255, 255, 255, 0.5);
-height: 10vh;
+height: 14vh;
 width: 30vw;
 border-radius: 4px;
 text-align: center;
@@ -311,9 +311,45 @@ text-align: center;
 
 padding-left: 0px;
 padding-right: 0px;
+margin: 5px;
 margin-top: 10%;
 margin-right:4%;
 text-align: center;
+
+}
+
+#profil{
+display:flex;
+justify-content: center;
+margin:81px;
+margin-left: 547px;
+padding: 5px;
+background-color:rgba(255, 255, 255, 0.5);
+height: 30vh;
+width: 20vw;
+border-radius: 4px;
+text-align: center;
+
+}
+
+#panel_profil{
+padding: 10%;
+padding-left: 0px;
+padding-right: 0px;
+margin-right:4%;
+text-align: center;
+
+}
+
+
+.produits_encadrement{
+background-color: rgba(255, 255, 255, 0.63);
+display: flex;
+justify-content: center;
+}
+
+.hover_produits:hover{
+background-color: rgba(0, 0, 0, 0.61);
 
 }
 .sous_categorie{
