--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -12,6 +12,95 @@ body{
   background-image: url('../img/fond_site.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.administration .adminform form{
+display: flex;
+width: 40%;
+flex-direction: column;
+background-color:rgba(255, 255, 255, 0.5);
+padding: 10px;
+align-items: center;
+justify-content: space-between;
+height: 900px;
+
+}
+
+.taille{
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.administration .adminform textarea{
+
+width: 80%;
+height: 300px;
+resize:none;
+
+}
+
+.form{
+  width: 70%;
+}
+
+.administration .adminform form input[type="text"],input[type="file"], select {
+
+width: 70%;
+padding: 10px;
+border:1px solid white;
+
+}
+
+.administration form input[type="submit"]{
+  padding: 10px;
+  background-color: #F5B041;
+  color: white;
+  transition: 0.5s;
+  border:none;
+}
+
+.administration form input[type="submit"]:hover{
+background-color: #273746 ;
+}
+
+.administration .adminform form input[type="number"]{
+  width: 20%;
+  padding: 10px;
+}
+
+.administration form input[type="text"]:focus,
+input[type="file"]:focus,
+textarea:focus{
+ 
+  border-color: #129FEA;  
+}
+
+.adminform{
+width: 100%;
+display: flex;
+justify-content: center;
+
+}
+
+.adminform2{
+width: 100%;
+display: flex;
+justify-content: center;
+height: 100px;
+
+}
+
+.administration .adminform2 form{
+display: flex;
+width: 30%;
+flex-direction: column;
+background-color:rgba(255, 255, 255, 0.5);
+padding: 10px;
+align-items: center;
+justify-content: space-between;
+
 }
 
 footer{
