--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -53,7 +53,7 @@ border:1px solid white;
 
 }
 
-.administration form input[type="submit"]{
+.administration .choix input[type="submit"]{
   padding: 10px;
   background-color: #F5B041;
   color: white;
@@ -61,7 +61,7 @@ border:1px solid white;
   border:none;
 }
 
-.administration form input[type="submit"]:hover{
+.administration .choix input[type="submit"]:hover{
 background-color: #273746 ;
 }
 
