--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -651,7 +651,21 @@ justify-content: space-between;
   justify-content: space-between;
 }
 
-.infos_panier{
+.panier_vide{
+  text-align: center;
+  color:white;
+  margin-top: 5%;
+}
+
+.image_bonhomme{
+  
+  display:flex;
+  margin-top: 5%;
+  justify-content: center;
+  width:100%;
+}
+
+.infos_panier, .infos_commande{
 
   display:flex;
   justify-content: center;
@@ -660,14 +674,14 @@ justify-content: space-between;
   margin-bottom: 5%;
 }
 
-.infos_panier table{
+.infos_panier table, .infos_commande table{
 
   background-color: rgba(255, 255, 255, 0.7); 
   width: 70%;
   padding: 20px;
 }
 
-.infos_panier table tr{
+.infos_panier table tr, .infos_commande table tr{
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -675,18 +689,52 @@ justify-content: space-between;
   border: 1px solid;
 }
 
-.prix_total{
+.prix_total, .prix_commande{
   width:100%;
   display: flex;
   justify-content: center;
    margin-bottom: 10%;
 }
 
-.prix_total div{
-  width: 20%;
+.prix_total .valid_panier{
+  width: 250px;
   background-color: rgba(255, 255, 255, 0.63); 
   text-align: center;
   font-size: 20px;
+  height: 80px;
+  padding: 10px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.prix_commande div{
+
+  width: 250px;
+  background-color: rgba(255, 255, 255, 0.63); 
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.prix_total form input[type="submit"]{
+
+  padding: 10px;
+  background-color: #F5B041;
+  color: white;
+  transition: 0.5s;
+  border:none;
+  cursor: pointer;
+
+}
+.prix_total form input[type="submit"]:hover{
+
+background-color: #273746 ;
 }
 
 .corbeille input[type="submit"]{
