--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -679,6 +679,27 @@ justify-content: space-between;
   background-color: rgba(255, 255, 255, 0.7); 
   width: 70%;
   padding: 20px;
+  font-size: 13px;
+}
+
+@media (max-width: 1200px) {
+ 
+  .infos_panier table, .infos_commande table{
+
+  background-color: rgba(255, 255, 255, 0.7); 
+  width: 100%;
+  font-size: 15px;
+  }
+}
+
+@media (max-width: 900px) {
+ 
+  .infos_panier table, .infos_commande table{
+
+  background-color: rgba(255, 255, 255, 0.7); 
+  width: 100%;
+  font-size: 10px;
+  }
 }
 
 .infos_panier table tr, .infos_commande table tr{
@@ -734,7 +755,7 @@ justify-content: space-between;
 }
 .prix_total form input[type="submit"]:hover{
 
-background-color: #273746 ;
+background-color: #273746;
 }
 
 .corbeille input[type="submit"]{
@@ -754,5 +775,46 @@ background-color: #273746 ;
 
 }
 
+.form_information{
+
+  width:100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+
+.form_information form{
+  width:50%;
+  background-color: rgba(255, 255, 255, 0.63);
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  justify-content: space-between;
+  height: 250px;
+}
+
+.form_information form input[type="text"], input[type="email"]{
+
+width: 70%;
+padding: 10px;
+
+}
+
+.form_information form input[type="submit"]{
+
+  padding: 10px;
+  background-color: #F5B041;
+  color: white;
+  transition: 0.5s;
+  border:none;
+  cursor: pointer;
+}
+
+.form_information form input[type="submit"]:hover{
+
+background-color: #273746;
+}
 
 
