--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -817,4 +817,45 @@ padding: 10px;
 background-color: #273746;
 }
 
+.visite_boutique{
+  display:flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  height: 200px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.visite_boutique h1{
+
+  color:white;
+}
+
+.visite_boutique div{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  background-color: rgba(255, 255, 255, 0.63);
+  height: 25%;
+}
+
+.visite_boutique div button{
+
+  padding: 10px;
+  background-color: #F5B041;
+  color: white;
+  transition: 0.5s;
+  border:none;
+  cursor: pointer;
+}
+
+.visite_boutique div button:hover{
+
+  background-color: #273746;
+}
+
 
