--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -920,7 +920,111 @@ background-color: #273746;
   background-color: #273746;
 }
 
+.box_avis{
 
+ background-color: rgba(255, 255, 255, 0.63);
+ width: 50%;
+ min-width: 450px;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+.avis_produit{
+
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.avis_produit h1{
+
+ font-size: 25px;
+}
+
+.avis_produit .form_avis{
+
+  width: 95%;
+  min-width:400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height:auto;
+  align-items: center;
+}
+
+
+.form_avis textarea{
+
+ resize:none;
+ width: 100%;
+ height: 150px;
+ margin-top: 5%;
+
+}
+
+.form_avis input[type="submit"]{
+
+  padding: 10px;
+  background-color: #F5B041;
+  color: white;
+  transition: 0.5s;
+  border:none;
+  cursor: pointer;
+  margin-top: 5px;
+}
+
+.form_avis input[type="submit"]:hover{
+  
+  background-color: #273746;
+}
+.avis_clients{
+
+  margin-top: 2%;
+  width: 85%;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  background-color: white;
+  word-wrap: break-word;
+  margin-bottom: 2%;
+}
+
+.corbeille_avis{
+
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  align-items: flex-end;
+}
+
+
+.corbeille_avis form input[type="submit"]{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.corbeille_avis form input[type="submit"]:hover{
+  
+  background-image: url("../img/corbeillehover.png");
+}
+
+.avis_clients .supprimer_avis{
+
+  width: 30px;
+  height: 30px;
+  background-image: url("../img/corbeille.png");
+  background-size: cover;
+  background-color: transparent;
+  border:none;
+  transition: 0.5s;
+}
+
+.nom_heure{
+
+  display: flex;
+  justify-content: space-between;
+}
 
 /*PARTIE RESPONSIVE*/
 
