--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -509,11 +509,13 @@ color:white;
 }
 
 
-
 .produits_encadrement{
 background-color: rgba(255, 255, 255, 0.63);
 display: flex;
 justify-content: center;
+flex-wrap: wrap;
+margin-top: 10%;
+margin-bottom: 10%;
 }
 
 .hover_produits:hover{
@@ -586,6 +588,7 @@ flex-direction: column;
 
   text-align: center;
   margin-bottom: 10px;
+  font-size: 15px;
 }
 
 
@@ -988,6 +991,7 @@ background-color: #273746;
   background-color: white;
   word-wrap: break-word;
   margin-bottom: 2%;
+  padding: 10px;
 }
 
 .corbeille_avis{
