--- a/sources/boutique.css
+++ b/sources/boutique.css
@@ -523,6 +523,21 @@ background-color: rgba(0, 0, 0, 0.61);
 
 }
 
+.hover_produits1{
+height: 250px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+
+}
+
+.hover_produits1 p{
+
+font-size: 25px;
+
+}
+
 /*DESCRIPTION*/
 
 .infos_produit{
